[metadata]
name = pyjinja2tester
version = 1.0.4
description = Lint and render Jinja 2 templates with Python
long_description = file: readme.md
license = GNU GPLv3
author = Mehron Kugler
author_email = mkugler@member.fsf.org
maintainer = Mehron Kugler
url = https://github.com/mehronkugler/pyjintest

[options]
packages = pyjintest
install_requires =
  jinja2 >= 2.11

[options.entry_points]
console_scripts =
    pyjintest = pyjintest.jinja_tester:main
